Finally fixed the horizontal scroll. All phone versions are complete. Just need to do the ipad version

--- a/src/components/users/MobileStyle.css
+++ b/src/components/users/MobileStyle.css
@@ -8,33 +8,25 @@
         padding:2%;
     }
 
+    div.ui.inverted.stackable.top.attached.closed.menu div.header.item{
+        min-width:100%;
+    }
+
     div.ui.inverted.stackable.top.attached.open.menu div.hamburger.active{
         right:30px;
     }
-   
-     div.header.item{
-        max-width:90%;
-    } 
 
-    div.ui.inverted.stackable.top.attached.closed.menu {
-        max-width:100%;
-    }
-
-    div.ui.inverted.stackable.top.attached.closed.menu div.hamburger.disabled {
-        right: 30px;
+    div.hamburger.disabled {
+        right: 40px;
         margin-top:4%;
     }
 
     div.hambuger.active{
-        right: 30px;
-    }
-   
-    div#root {
-       max-width: 100%;
+        right: 40px;
     }
 
     /* --------------------------------------------------------------- */
-    /* bottom menu */
+    /* BOTTOM MENU */
     /* --------------------------------------------------------------- */
 
     div.ui.large.fluid.pointing.vertical.tabular.menu {
@@ -55,7 +47,6 @@
 
     div.ui.large.fluid.pointing.vertical.tabular.menu .active.item { 
         padding-bottom:2%;
-        /* margin-left:2%; */
         box-shadow: 2px 4px 5px rgb(58, 58, 58);
         
     }
@@ -66,7 +57,6 @@
         box-shadow: 2px 3px 5px rgb(58, 58, 58);
         max-width: 50px;
         max-height:50px;
-        /* padding: 2%; */
     }
 
     div.ui.large.fluid.pointing.vertical.tabular.menu a.active.item::after{
@@ -124,10 +114,10 @@
 
    div.center.aligned.eight.wide.computer.sixteen.wide.mobile.column:nth-child(even) {
         background-color:black;
-        width: 100%;
+        min-width: 46vh;
         padding-top:3%;
    }
-
+   
     div.ui.header{
         color:white;
     }
@@ -153,6 +143,8 @@
         max-width: 90%;
         margin-left:5%;
     }
+
+
 
     /* ------------------------------------------------------------------- */
    /* ---OTHER PAGES--- */
@@ -205,19 +197,22 @@
         font-size: 16px;
     }
 
-    /* ------------------------------------------------------------------- */
+            /* ------------------------------------------------------------------- */
 
-    @media (min-width:360px) {
-        img.ui.tiny.circular.image.avatarImage {
-            height:80px;
-            padding-right:2%;
-        }
-    
-        div.ui.large.fluid.pointing.vertical.tabular.menu .item {
-            margin-left:2%;
+            @media (min-width:360px) {
+                img.ui.tiny.circular.image.avatarImage {
+                    height:80px;
+                    padding-right:2%;
+                }
             
-        }
-    }
+                div.ui.large.fluid.pointing.vertical.tabular.menu .item {
+                    margin-left:2%;
+                    
+                }
+            }
+
+
+
     /* ---------------------------------------------------------------- */
 
     /* EVENTS */
@@ -261,7 +256,11 @@
         background-color:#2185D0;
     }
 
-  /* Fav Pizza  */
+   /* ------------------------------------------------------------------- */  
+
+  /* FAV PIZZA  */
+
+   /* ------------------------------------------------------------------- */
   
   
     img.ui.medium.circular.image{
@@ -286,12 +285,15 @@
         padding-top:5%;
     }
 
-     /* About Plza */
-    
+
+     /* ------------------------------------------------------------------- */
+     /* ABOUT PLZA*/
+     /* ------------------------------------------------------------------- */
+
     h1.ui.center.aligned.header{
         padding:3%;
         background-color:lightgrey;
-        max-width:100%;
+        min-width:100%;
     }
     
     div p.about-para {
@@ -300,7 +302,10 @@
         border-bottom: .5px solid lightgrey;
     }
 
-    /*Business Features */
+    
+    /* ------------------------------------------------------------------- */
+    /*BUSINESS FEATURES*/
+    /* ------------------------------------------------------------------- */
 
     div p.biz-features{
         display:block;
@@ -310,30 +315,35 @@
         max-width:90%;
     }
 
+
     /* ------------------------------------------------------------------- */
     /*USER FEATURES*/
     /* ------------------------------------------------------------------- */
    
-    
     div p.user-features{
         display:block;
         max-width:90%;
         margin-left: 5%;
     }
    
-   div.first div.column{
+   div.three.column.row div.first div.column{
         padding:3%;
         max-height:80%;
-        margin-left:5%;
         max-width:100%;
     }
 
+    div.three.column.row div.first div.column div{
+        max-width:90%;
+    }
 
-
-    div.three.column.row div.first div.column div {
-        /* background-color:red; */
+    div.three.column.row div.second{
         max-width:100%;
-        margin-left: 1%;
+        padding:0%;
+        margin-right:2%;
+    }
+
+    div.three.column.row div.second div {
+        max-width:90%;
     }
 
     img.friends-img{
@@ -343,10 +353,16 @@
     }
 
     div.bottom {
-        margin-top: -70%;
+        margin-top: -67%;
         padding-bottom:5%;
         margin-left:1%;
     }
+
+        @media (min-width:414px) and (max-width: 760px){
+            div.bottom{
+                margin-top:-60%;
+            }
+        }
 
     div.bottom h2.ui.header{
         margin-left:2%;
@@ -355,52 +371,41 @@
         margin-left:2%;
     }
 
+    div.three.column.row div.second {
+        max-width:90%;
+    }
    div.three.column.row div.second div.column {
        max-width:90%;
-       /* background-color:green; */
    }
-/* 
-   div.three.column.row div.second div.column div {
-       background-color:red;
-     
-   } */
-   
- 
+
     div.second div.column{
-  
-        /* border-bottom:.5px solid black;
-        border-top: .5px solid black; */
         padding:5% 8% 3% 7%;  
     
         display:flex;
         flex-direction:column-reverse;
-       
-    
     }
 
     div.second-part{
         margin-top: -40%;
         padding:2%;
         max-width:70%;
-     
     }
 
     img.pizza-img{
         max-width:85%;
         max-height:65%;
-        /* margin-left:5%; */
         box-shadow: 5px 3px 6px rgb(58, 58, 58);
     }
-   /* div.third{
-       max-width:100%;
-       background-color:green;
-       
-   } */
+
     div.third div.column {
         max-width:90%;
         padding:3% 2% 3% 2%;
         margin:1% 1% 0% 3%;
         border: .5px dashed lightgrey;
+    }
+
+    div.three.column.row div.third div.column div{
+        max-width:90%;
     }
 
     div.third-bottom{
@@ -416,34 +421,12 @@
         box-shadow: 5px 3px 6px rgb(58, 58, 58);
     }
 
-   
-/* 
-    div.third div.column div.third-bottom{
-        margin-top: -45%;
-        max-width:90%;
-    }
-
-    div.ui.stackable.padded.equal.width.grid{
-        max-width:100%;
-    }
-
-    div.three.column.row div.first div.column{
-        margin-left:2%;
-        padding:5%;
-    }
-    div.three.column.row div.first div.column div{
-        margin-left:10%;
-        max-width:100%;
-    }
-
-    div.second {
-        max-width:100%;
-    } */
 
 }
 
-
-/* friends */
+/* ------------------------------------------------------------------- */
+/* FRIENDS */
+/* ------------------------------------------------------------------- */
 
 @media (min-width:360px) {
     img.ui.tiny.circular.image.avatarImage {
